Gutek: Cleaning code done using SonarLint and Qodana